# CERN_Coding_Exercises

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
data/: circular_deps.json  circular_deps.txt  complex_deps.json  complex_deps.txt  missing_dep_deps.json  simple_deps2.json  simple_deps2.txt  single_package_deps.json  single_package_deps.txt
ex1/tests/: test_ex1_duplicate_detector.py
ex2/data/: circular_deps.txt  simple_deps1.txt
ex2/tests/: test_ex2_dependency_resolver.py
src/: ex1_duplicate_detector.py  ex2_dependency_resolver.py
tests/: test_ex1_duplicate_detector.py  test_ex2_dependency_resolver.py
