[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cern-coding-exercises"
version = "1.0.0"
authors = [
    {name = "Mateus Pereira"},
]
description = "My package description"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "pytest",
    "pylint"
]

[project.scripts]
ex1 = "ex1_duplicate_detector:main"
ex2 = "ex2_dependency_resolver:main"
